--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:largeHeap="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -31,7 +31,7 @@
             android:label="@string/title_menu_home"
             android:theme="@style/MenuTheme" />
         <activity
-            android:name=".AddItem"
+            android:name=".AddItemHome"
             android:label="@string/title_activity_add_item"
             android:theme="@style/AdminTheme" />
         <activity
@@ -48,6 +48,14 @@
         <activity
             android:name=".Welcome"
             android:label="@string/title_activity_welcome"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ItemDetail"
+            android:label="@string/title_activity_item__detail"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ShoppingCartHome"
+            android:label="@string/title_activity_shopping_cart"
             android:theme="@style/AppTheme"></activity>
     </application>
 
