--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
+        android:name=".App"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -22,6 +23,7 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -68,6 +70,10 @@
             android:name=".AddCustomerHome"
             android:label="@string/title_activity_add_customer_home"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".KitchenHome"
+            android:label="@string/title_activity_kitchen_home"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
