--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -73,6 +73,10 @@
         <activity
             android:name=".KitchenHome"
             android:label="@string/title_activity_kitchen_home"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".CashierHome"
+            android:label="@string/title_activity_cashier"
             android:theme="@style/AppTheme"></activity>
     </application>
 
