--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,21 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/cookbook"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Splash"
+            android:label="FoodUsher"
+            android:theme="@style/MenuTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -24,7 +34,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
@@ -40,16 +50,13 @@
             android:label="@string/title_activity_admin_home"
             android:theme="@style/AdminTheme" />
         <activity
-            android:name=".Login1"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".Login"
+            android:name=".LoginHome"
             android:label="@string/title_activity_login"
             android:theme="@style/AdminTheme" />
         <activity
             android:name=".Welcome"
             android:label="@string/title_activity_welcome"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/MenuTheme" />
         <activity
             android:name=".ItemDetail"
             android:label="@string/title_activity_item__detail"
@@ -61,15 +68,11 @@
         <activity
             android:name=".ReviewHome"
             android:label="@string/title_activity_review_home"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/MenuTheme" />
         <activity
             android:name=".AddReviewHome"
             android:label="@string/title_activity_add_review"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".AddCustomerHome"
-            android:label="@string/title_activity_add_customer_home"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/MenuTheme" />
         <activity
             android:name=".KitchenHome"
             android:label="@string/title_activity_kitchen_home"
@@ -77,6 +80,14 @@
         <activity
             android:name=".CashierHome"
             android:label="@string/title_activity_cashier"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".AddStaff"
+            android:label="@string/title_activity_add_staff"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".Filter"
+            android:label="@string/title_activity_filter"
             android:theme="@style/AppTheme"></activity>
     </application>
 
